# plot4paper

./: .flake8  .gitignore  LICENSE  Makefile  __init__.py  config.yaml  example.ipynb  plot4paper.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: example.ipynb
src/plot4paper/: __init__.py  _corner.py  corner.py  qualfig.py
src/plot4paper/corner/: corner.py  mvg.py
tests/: test_corner.py  test_plot4paper.py  test_qualfig.py
