[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plot4paper"
version = "0.1.0"
description = "Your package description"
authors = [{ name="Jonathan Clarke", email="you@example.com" }]
dependencies = [
    "matplotlib==3.10.3",
    "numpy==2.2.6",
    "pyyaml==6.0.2",
    "scipy==1.16.0",
    "cycler==0.12.1"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"plot4paper.data" = ["*.yaml"]
